--- a/Stylos.css
+++ b/Stylos.css
@@ -25,7 +25,7 @@ body{
     border: 1px solid rgb(231, 205, 57) ;
     border-radius: 5px;
     color: rgb(231, 205, 57) ;
-    padding: 5px;
+    padding: 1rem;
     display: flex;
     float: left;
     font-size: 24px;
@@ -38,7 +38,7 @@ body{
 }
 .info1{
 
-margin-top: 10%;
+margin-top: 20%;
 background-color: rgb(255, 255, 255);
 max-height: 500px;
 border-radius: 5px;
@@ -241,6 +241,6 @@ tr:hover{
 }
 .container{
     padding: 1rem 1rem;
-    margin-top: 35rem;
+    margin-top: 35%;
 }
 
