--- a/Stylos.css
+++ b/Stylos.css
@@ -24,7 +24,7 @@ body{
 .list1{
     border: 1px solid rgb(231, 205, 57) ;
     border-radius: 5px;
-    color: rgb(231, 205, 57) ;
+    color: rgb(112, 24, 24) ;
     padding: 1rem;
     display: flex;
     float: left;
@@ -67,8 +67,6 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .demo{
     align-items: center;
-    padding: 20px;
-    max-height: 500px ;
     padding:5%; 
     float: right;
     background-color: rgb(255, 255, 255);
@@ -76,7 +74,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
     border-radius: 5px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+    display: box;
 }
 .contenedor2{
     align-items: center;
