--- a/Stylos.css
+++ b/Stylos.css
@@ -245,3 +245,7 @@ tr:hover{
 h1{
     font-family: 'script-mt-bold-regular', sans-serif;
 }
+
+p{
+    font-family: 'calibri-light-regular', sans-serif;
+}
